# gamelib

./: .gitignore  README.md  null.ini  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
gamelib/: __init__.py  _core.py  _gl.py  _obj.py  _window.py  component.py  ecs.py  events.py  geometry.py  gl.py  input.py  resources.py  shaders.py  time.py  transforms.py  utils.py
gamelib/core/: datatypes.py  events.py  gl.py  input.py  resources.py  runtime.py  time.py  window.py
gamelib/ecs/: __init__.py  base.py  collisions.py  component.py  environment.py  system.py  transforms.py
gamelib/geometry/: __init__.py  base.py  collisions.py  cube.py  gridmesh.py  transforms.py  wavefront.py
gamelib/rendering/: __init__.py  _global.py  buffers.py  camera.py  glslutils.py  gpu.py  shaders.py  textures.py  uniforms.py
gamelib/utils/: ensure.py
manual_tests/: basic_shader_rendering.py  camera_example.py  debug_input.py  loading_shader_by_name.py  rendering_geometry.py  rendering_with_index_buffer.py  textures_and_atlasing.py
manual_tests/shaders/: basic.frag  basic.vert  flat_shaded.frag  flat_shaded.vert
src/gamelib/: __init__.py  atlas.py  component.py  environment.py  events.py  sharedmem.py  system.py  textures.py
tests/: conftest.py
tests/gl_context_required/: manual_rendering_tests.py  test_buffers.py  test_gl_shaders.py  test_gpu.py  test_shaders.py
tests/integration/: test_collision_component.py  test_collisions.py  test_components.py  test_geometry.py  test_glslutils.py  test_input.py  test_shaders.py
tests/integration_tests/: test_environment.py  test_events.py  (+2 more)
tools/: runshader.py
(+57 files in other folders)
