[metadata]
name = gamelib
description = Simple entity component system style game library for python.
author = Jeffrey Pepin
license = MIT
license_file = LICENSE
platforms =
    windows
    linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    gamelib
    gamelib.rendering
    gamelib.core
    gamelib.geometry
    gamelib.ecs
install_requires =
    moderngl>=5.0
    moderngl-window>=2.0
    numpy>=1.0
    Pillow>=9.0
    pygame>=2.1.0
python_requires = >= 3.8
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.0
    tox>=3.24

